# obsidian-tools

./: Cargo.toml  flake.nix
examples/: init.txt
src/: main.rs  markdown.rs
