[package]
name = "obsidian-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-server = "0.7.7"
lsp-types = "0.97.0"
markdown = "=1.0.0-alpha.21"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tokio = { version = "1.41.1", features = ["full"] }
